--- a/Lift.Bll/Lift.Bll.csproj
+++ b/Lift.Bll/Lift.Bll.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="MenuInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
