页脚-修改布局

--- a/Lift.UI/Lift.UI.csproj
+++ b/Lift.UI/Lift.UI.csproj
@@ -396,7 +396,9 @@
     <Content Include="Views\Danasusi\Youyingu.cshtml" />
     <Content Include="Views\Home\Yilidan.cshtml" />
     <Content Include="Views\Klz\Ailan.cshtml" />
-    <Content Include="Views\HyperBootstrap\Biaodan.cshtml" />
+    <Content Include="Views\Bootstrap\Biaodan.cshtml" />
+    <Content Include="Views\Easyui\DemoList.cshtml" />
+    <Content Include="Views\Easyui\Tree.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -414,9 +416,10 @@
     <Compile Include="Code\AzerothExtension.cs" />
     <Compile Include="Controllers\Admin\AccountController.cs" />
     <Compile Include="Controllers\AuthenticationedController.cs" />
+    <Compile Include="Controllers\BootstrapController.cs" />
     <Compile Include="Controllers\DanasusiController.cs" />
+    <Compile Include="Controllers\EasyuiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\HyperBootstrapController.cs" />
     <Compile Include="Controllers\KlzController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
