切面处理全局异常日志、审计日志

--- a/Gutop.Model/Gutop.Model.csproj
+++ b/Gutop.Model/Gutop.Model.csproj
@@ -69,8 +69,12 @@
     <Compile Include="DTO\MenuInfoWrapper.cs" />
     <Compile Include="DTO\Treedata.cs" />
     <Compile Include="DTO\BizContext.cs" />
+    <Compile Include="DTO\UserInfo.cs" />
     <Compile Include="Enum\CacheIndex.cs" />
     <Compile Include="Enum\SessionIndex.cs" />
+    <Compile Include="LogInfo.cs">
+      <DependentUpon>Entity.tt</DependentUpon>
+    </Compile>
     <Compile Include="MenuInfo.cs">
       <DependentUpon>Entity.tt</DependentUpon>
     </Compile>
