--- a/Gutop.Portal/Gutop.Portal.csproj
+++ b/Gutop.Portal/Gutop.Portal.csproj
@@ -702,9 +702,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\ExceptionHandler.cs" />
-    <Compile Include="App_Start\InterceptedHandler.cs" />
-    <Compile Include="App_Start\AuditHandler.cs" />
+    <Compile Include="App_Start\InterceptedControllerHandler.cs" />
     <Compile Include="Util\GutopExtension.cs" />
     <Compile Include="Controllers\Admin\AccountController.cs" />
     <Compile Include="Controllers\AuthenticationedController.cs" />
@@ -717,6 +715,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\LogInfoHelper.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
