--- a/Gutop.Bll/Gutop.Bll.csproj
+++ b/Gutop.Bll/Gutop.Bll.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Bll.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="LogInfo.cs" />
     <Compile Include="MenuInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
