--- a/Gutop.Portal/Web.config
+++ b/Gutop.Portal/Web.config
@@ -35,6 +35,13 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
+    <authentication>
+      <forms defaultUrl="/home/index" loginUrl="/account/index" slidingExpiration="true" timeout="30"></forms>
+    </authentication>
+    <authorization>
+      <allow users="*" />
+      
+    </authorization>
   </system.web>
   <appSettings>
     <add key="webpages:Enabled" value="false" />
@@ -70,4 +77,5 @@
   <connectionStrings>
     <add name="master" providerName="MySql.Data.MySqlClient" connectionString="Data Source=127.0.0.1;Initial Catalog=tzp;User ID=root;Password=123456" />
   </connectionStrings>
+  
 </configuration>
