--- a/Gutop.Portal/Gutop.Portal.csproj
+++ b/Gutop.Portal/Gutop.Portal.csproj
@@ -723,8 +723,12 @@
       <Project>{0eca744c-1ce0-4a99-a89e-731be2cfe2c4}</Project>
       <Name>Gutop.Bll</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Gutop.Model\Gutop.Model.csproj">
+    <ProjectReference Include="..\Gutop.Entity\Gutop.Entity.csproj">
       <Project>{1479d423-d3c0-470a-9ff7-77bd68c0a49a}</Project>
+      <Name>Gutop.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Gutop.Model\Gutop.Model.csproj">
+      <Project>{e0ab7c26-07ec-4a9e-b062-775655d12f0f}</Project>
       <Name>Gutop.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\Gutop.Util\Gutop.Util.csproj">
