登陆-认证-授权

--- a/Gutop.Entity/Gutop.Entity.csproj
+++ b/Gutop.Entity/Gutop.Entity.csproj
@@ -65,6 +65,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="IControllerIntercepted.cs" />
     <Compile Include="LogInfo.cs">
       <DependentUpon>Entity.tt</DependentUpon>
     </Compile>
