--- a/Gutop.Portal/Web.config
+++ b/Gutop.Portal/Web.config
@@ -77,5 +77,7 @@
   <connectionStrings>
     <add name="master" providerName="MySql.Data.MySqlClient" connectionString="Data Source=127.0.0.1;Initial Catalog=tzp;User ID=root;Password=123456" />
   </connectionStrings>
-
+  <appSettings>
+    <add key="LogHelper:Enable" value="true"/>
+  </appSettings>
 </configuration>
