--- a/Gutop.Entity/Gutop.Entity.csproj
+++ b/Gutop.Entity/Gutop.Entity.csproj
@@ -66,7 +66,7 @@
       <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="IControllerIntercepted.cs" />
-    <Compile Include="LogInfo.cs">
+    <Compile Include="Log.cs">
       <DependentUpon>Entity.tt</DependentUpon>
     </Compile>
     <Compile Include="MenuInfo.cs">
