--- a/Gutop.Portal/Gutop.Portal.csproj
+++ b/Gutop.Portal/Gutop.Portal.csproj
@@ -731,9 +731,9 @@
       <Project>{e0ab7c26-07ec-4a9e-b062-775655d12f0f}</Project>
       <Name>Gutop.Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Gutop.Util\Gutop.Util.csproj">
+    <ProjectReference Include="..\Gutop.Utils\Gutop.Utils.csproj">
       <Project>{33077314-dc9a-4881-a11a-651d024fe5bf}</Project>
-      <Name>Gutop.Util</Name>
+      <Name>Gutop.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
