--- a/Gutop.Bll/Gutop.Bll.csproj
+++ b/Gutop.Bll/Gutop.Bll.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Bll.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="MenuInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
