--- a/Gutop.Portal/packages.config
+++ b/Gutop.Portal/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac.Extras.DynamicProxy" version="4.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net452" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.12" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
