--- a/Gutop.Portal/Web.config
+++ b/Gutop.Portal/Web.config
@@ -10,6 +10,7 @@
       <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
     </sectionGroup>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -78,4 +79,28 @@
   <connectionStrings>
     <add name="master" providerName="MySql.Data.MySqlClient" connectionString="Data Source=127.0.0.1;Initial Catalog=tzp;User ID=root;Password=123456" />
   </connectionStrings>
+  <log4net>
+    <logger name="loginfo">
+      <level value="INFO" />
+      <appender-ref ref="InfoAppender" />
+    </logger>
+    <appender name="InfoAppender" type="log4net.Appender.RollingFileAppender">
+      <!--设置日志存储路径-->
+      <param name="File" value="log4net/log/" />
+      <!--是否追加到文件-->
+      <param name="AppendToFile" value="true" />
+      <!--最多产生的日志文件数，超过则只保留最新的n个。设定值value="－1"为不限文件数-->
+      <param name="MaxSizeRollBackups" value="100" />
+      <param name="MaxFileSize" value="1024" />
+      <!--是否只写到一个文件中-->
+      <param name="StaticLogFileName" value="false" />
+      <!--这是按日期产生文件夹，并在文件名前也加上日期-->
+      <param name="DatePattern" value="yyyyMM/dd&quot;.log&quot;" />
+      <!--按照何种方式产生多个日志文件(日期[Date],文件大小[Size],混合[Composite])-->
+      <param name="RollingStyle" value="Date" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%n日志时间：%d [%t] %n日志级别：%-5p %n消息描述：%c [%x] %n%m %n " />
+      </layout>
+    </appender>
+  </log4net>
 </configuration>
