统一日志处理

--- a/Gutop.Utils/Gutop.Utils.csproj
+++ b/Gutop.Utils/Gutop.Utils.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IIndex.cs" />
     <Compile Include="Log4netLogger.cs" />
     <Compile Include="Log4netLoggerProvider.cs" />
+    <Compile Include="LogWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
