--- a/Gutop.Model/Gutop.Model.csproj
+++ b/Gutop.Model/Gutop.Model.csproj
@@ -62,34 +62,35 @@
     <Compile Include="Autofac\IScoped.cs" />
     <Compile Include="Autofac\ISingleton.cs" />
     <Compile Include="Autofac\ITransient.cs" />
-    <Compile Include="CacheIndex.cs" />
+    <Compile Include="CacheCategory.cs" />
     <Compile Include="Entity\DbContext.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DbContext.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entity\Empoloyee.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
     <Compile Include="Entity\Log.cs">
-      <DependentUpon>Entity.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Entity\MenuInfo.cs">
       <DependentUpon>Entity.tt</DependentUpon>
     </Compile>
     <Compile Include="Entity\Organization.cs">
       <DependentUpon>Entity.tt</DependentUpon>
     </Compile>
-    <Compile Include="Entity\UserInfo.cs">
+    <Compile Include="Entity\Staff.cs">
+      <DependentUpon>Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entity\UrlMap.cs">
+      <DependentUpon>Entity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entity\User.cs">
       <DependentUpon>Entity.tt</DependentUpon>
     </Compile>
     <Compile Include="GutopRuntimeException.cs" />
     <Compile Include="IControllerIntercepted.cs" />
-    <Compile Include="MenuInfoWrapper.cs" />
+    <Compile Include="MenuCollections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SessionIndex.cs" />
+    <Compile Include="SessionCategory.cs" />
     <Compile Include="Treedata`.cs" />
-    <Compile Include="UserInfo.cs" />
+    <Compile Include="UrlMapWrapper.cs" />
+    <Compile Include="UserWrapper.cs" />
     <Compile Include="VO\AccountLoginInput.cs" />
   </ItemGroup>
   <ItemGroup>
