--- a/Gutop.Bll/Gutop.Bll.csproj
+++ b/Gutop.Bll/Gutop.Bll.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Log.cs" />
     <Compile Include="MenuInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
