--- a/Gutop.Model/Gutop.Model.csproj
+++ b/Gutop.Model/Gutop.Model.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Treedata`.cs" />
     <Compile Include="UrlMapWrapper.cs" />
     <Compile Include="UserWrapper.cs" />
-    <Compile Include="VO\AccountLoginInput.cs" />
+    <Compile Include="VO\Account\Mode.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gutop.Utils\Gutop.Utils.csproj">
