--- a/Gutop.Portal/Web.config
+++ b/Gutop.Portal/Web.config
@@ -38,7 +38,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
-      <forms name="gutopauthentication" defaultUrl="/home/index" loginUrl="/account/index" cookieless="UseCookies" slidingExpiration="true" timeout="30"></forms>
+      <forms  defaultUrl="/home/index" loginUrl="/account/index" cookieless="UseCookies" slidingExpiration="true" timeout="30"></forms>
     </authentication>
     <authorization>
       <allow users="*" />
